# LLogM-prototype_0.1

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  constraints.txt  pyproject.toml  requirements-optional.txt  requirements.txt  tmux.conf
.github/workflows/: ci.yml
configs/: accelerate.yaml  datasets.yaml  docker.args  encoder_stack.yaml  global.yaml  ontology.yaml  runpod.env  runtime.yaml  torch_distributed.env
docker/: Dockerfile  compose.yaml
hwr64/: __init__.py
hwr64/configs/: datasets.yaml
hwr64/scripts/: fetch_datasets.py
hwr64/src/: __init__.py  augment.py  dataset.py  eval.py  export.py  losses.py  sleep_phase.py  train.py
hwr64/src/models/: __init__.py  a1_ds_tinynet.py  a2_cr_lite.py  b1_crnn_ctc.py
scripts/: bootstrap.sh  fetch_data.py  onstart.sh  print_env.sh  pull_models.py  run_encoder.py  sanity_checks.sh  setup_env.sh  start_tmux.sh
src/: check_cuda.py
src/encoder/: __init__.py  amr.py  consolidate.py  coref.py  elink.py  events_oneie.py  frames_fst.py  openie5.py  pipeline.py  srl_allennlp.py  timex.py
src/llogm/cli/: main.py
src/ontology/: base_schema.md
tests/smoke/: test_pipeline_runs.py
tests/unit/: test_consolidate_axioms.py  test_schema_compat.py
